--- a/demo-presentacion.ipynb
+++ b/demo-presentacion.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -73,7 +73,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "notes"
     }
    },
    "outputs": [],
