--- a/demo-presentacion.ipynb
+++ b/demo-presentacion.ipynb
@@ -73,7 +73,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
